--- a/pom.xml
+++ b/pom.xml
@@ -130,8 +130,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
+				<version>3.0.0-M8</version>
 				<configuration>
+					
 					<providers>
 						<provider>
 							<name>testng</name>
